2006-05-06  Karl Runge <runge@karlrunge.com>
	* configure.ac: add linux/videodev.h and linux/fb.h detection.

2006-05-04  Steven Carr <scarr@jsa-usa.com>
	* rfbEncodingSupportedEncodings - What encodings are supported?
	* rfbEncodingSupportedMessages - What message types are supported?
	  This way a client can identify if a particular server supports a
	  specific message types.
	* rfbEncodingServerIdentity - What is the servers version string?
	  ie: "x11vnc: 0.8.1 lastmod: 2006-04-25 (LibVNCServer 0.9pre)"

2006-05-03  Steven Carr <scarr@jsa-usa.com>
	* Server Side Scaling is now supported in libvncserver
	  Both PalmVNC and UltraVNC SetScale messages are supported

2006-05-02  Steven Carr <scarr@jsa-usa.com>
	* Ultra Encoding added.  Tested against UltraVNC V1.01
	* libvncclient/rfbproto.c  CopyRectangle() BPP!=8 bug fixed.
	* Incompatible pointer usage warnings eliminated (gcc 4.0.1)

2006-04-27  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* examples/{rotate.c, rotatetemplate.c}: add modified pnmshow
	  which demonstrates fast rotating and flipping.

2006-04-26  Karl Runge <runge@karlrunge.com>
	* all Makefile.am: use -I $(top_srcdir) instead of -I .. so VPATH
	  builds will work.
	* configure.ac: create rfb subdir for rfbint.h under VPATH. 

2006-04-17 Steven Carr <scarr@jsa-usa.com>
	* Added an example camera application to demonstrate another
	  way to write a server application.

2006-04-05  Karl Runge <runge@karlrunge.com>
	* classes/ssl: SSL Java viewer workarounds for firewall
	  proxies (signed applet as last resort, proxy.vnc).
	  include ssl_vncviewer stunnel wrapper script.

2006-03-28  Steven Carr <scarr@jsa-usa.com>
	* SDLvncviewer.c, rfbproto.c, vncviewer.c, main.c, rfbserver.c,
	  rfb.h, rfbclient.h, rfbproto.h: add new encoding: KeyboardLedState

2006-03-28  Karl Runge <runge@karlrunge.com>
	* classes/ssl: patch to tightvnc Java viewer for SSL support
	  plus other fixes (richcursor colors, Tab keysym, etc).