@@ -1,3 +1,12 @@
+2006-05-13  Karl Runge <runge@karlrunge.com>
+	* minilzo.c,minilzo.h,lzoconf.h: switch to non-CRLF versions.
+	* libvncclient/Makefile.am: add minilzo.c, minilzo.h, lzoconf.h
+	  and ultra.c to materials lists.
+	* libvncserver/scale.c: remove libm dependency with CEIL and
+	  FLOOR macros.
+	* libvncserver/rfbserver.c: remove C99 declarations.
+	* vncterm/Makefile.am: fix VPATH build.
+
 2006-05-06  Karl Runge <runge@karlrunge.com>
 	* configure.ac: add linux/videodev.h and linux/fb.h detection.
 
